# ESG_monthly_agent

./: .env.example  .gitignore  README.md  __init__.py  app.py  config.py  graph.py  main.py  pyproject.toml  requirements-dev.txt  state.py
agents/: __init__.py  evidence_repair_agent.py  implementation_helper_agent.py  news_research_agent.py  search_planner_agent.py
docs/: FILE_INVENTORY.md  PROJECT_STRUCTURE.md  RUNBOOK.md
nodes/: classify_events.py  company_exposure.py  deepsearch.py  execute_search.py  export_files.py  extract_evidence.py  fetch_pages.py  init_context.py  issue_chain_builder.py  llm_review.py  parse_documents.py  peer_benchmark.py  pre_research.py  quality_review.py  recommendation.py  report_writer.py  source_quality_filter.py  targeted_repair.py
prompts/: assess_company_exposure.md  extract_company_event.md  extract_industry_event.md  extract_peer_action.md  extract_rule_changes.md  map_rule_to_issue.md  quality_review.md  synthesize_recommendation.md  write_report.md
research_providers/: __init__.py  anthropic_web_search_provider.py  base.py  local_vector_provider.py  openai_deep_research_provider.py  openai_web_search_provider.py  qwen_dashscope_search_provider.py  tavily_official_search_provider.py  zhipu_web_search_provider.py
runs/: report.md
schemas/: __init__.py  base.py  company.py  deepsearch.py  event.py  evidence.py  exposure.py  issue.py  peer_action.py  quality.py  recommendation.py  report.py  rule_change.py  source.py
skills/: __init__.py  common.py
subgraphs/: __init__.py  deepsearch_research_graph.py  (+3 more)
(+100 files in other folders)
