[project]
name = "esg-monthly-agent"
version = "0.1.0"
description = "Evidence-driven ESG monthly report agent built with LangGraph, LangChain, and skill modules."
requires-python = ">=3.11"
dependencies = [
  "langgraph>=1.0.0",
  "langchain>=1.0.0",
  "langchain-core>=1.0.0",
  "langchain-mcp-adapters>=0.3.0",
  "pydantic>=2.7.0",
  "typing-extensions>=4.10.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]
addopts = "-p no:debugging"

[tool.ruff]
line-length = 100
